chore(employee): adjust pull request
